turtleart.diskfour.DiskFour.scala.error
Erreur de compilation :
DiskFour:1: error: Missing closing brace `}' assumed here
override def run() {
^DiskFour:1: error: expected start of definition
override def run() {
         ^